--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 # Logs
 logs
 *.log
@@ -21,6 +22,7 @@ lib-cov
 
 # Coverage directory used by tools like istanbul
 coverage
+/coverage
 *.lcov
 
 # nyc test coverage
@@ -37,10 +39,14 @@ bower_components
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
+/build
 
 # Dependency directories
 node_modules/
+/node_modules
 jspm_packages/
+/.pnp
+.pnp.js
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
@@ -78,6 +84,7 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
+.DS_Store
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
