--- a/.gitignore
+++ b/.gitignore
@@ -43,10 +43,15 @@ build/Release
 
 # Dependency directories
 node_modules/
-/node_modules
 jspm_packages/
+/node_modules
 /.pnp
-.pnp.js
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
@@ -79,12 +84,14 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
+# env files (can opt-in for committing if needed)
 .env
 .env.development.local
 .env.test.local
 .env.production.local
 .env.local
 .DS_Store
+*.pem
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -93,6 +100,9 @@ web_modules/
 # Next.js build output
 .next
 out
+/.next/
+/out/
+next-env.d.ts
 
 # Nuxt.js build / generate output
 .nuxt
@@ -110,6 +120,9 @@ dist
 # vuepress v2.x temp and cache directory
 .temp
 .cache
+
+# vercel
+.vercel
 
 # Docusaurus cache and generated files
 .docusaurus
